// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test simple array 1`] = `
Object {
  "errorMessage": "Should have at least 3 items.",
  "fieldPath": Array [],
  "isValid": false,
  "items": Array [
    Object {
      "errorMessage": "",
      "fieldPath": Array [
        0,
      ],
      "isValid": true,
    },
    Object {
      "errorMessage": "",
      "fieldPath": Array [
        1,
      ],
      "isValid": true,
    },
  ],
}
`;

exports[`Test simple array values 1`] = `
Object {
  "errorMessage": "Should have at least 3 items.",
  "fieldPath": Array [],
  "isValid": false,
  "items": Array [
    Object {
      "errorMessage": "Should be at least 5 characters.",
      "fieldPath": Array [
        0,
      ],
      "isValid": false,
    },
    Object {
      "errorMessage": "",
      "fieldPath": Array [
        1,
      ],
      "isValid": true,
    },
  ],
}
`;
